--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haikutter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Hello,World!</h1>
+    <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-0 h1">Haikutter</span>
+        <ul class="nav">
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        </ul>
+    </nav>
+    <form action="cgi-bin/formmail.cgi" method="post">Haikutter：<br>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">俳句を入力するんだ！</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <button type="submit" class="btn btn-primary mb-2">送信する</button>
+          </div>
+        </form>
+    
 </body>
 </html>
