--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haikutter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script defer src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -16,10 +17,10 @@
     <form action="cgi-bin/formmail.cgi" method="post">Haikutter：<br>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">俳句を入力するんだ！</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            <button type="submit" class="btn btn-primary mb-2">送信する</button>
+            <textarea class="form-control" id="text" rows="3"></textarea>
+            <input type="text" id="name">
+            <button type="submit" class="btn btn-primary mb-2" id=send>送信する</button>
           </div>
-        </form>
-    
+    </form>
 </body>
 </html>
