--- a/templates/main.html
+++ b/templates/main.html
@@ -6,27 +6,40 @@
     <title>Haikutter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script defer src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="https://kit.fontawesome.com/1632a6074b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <!-- <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Haikutter</span>
-        <ul class="nav">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        </ul>
-    </nav>
-    <form action="cgi-bin/formmail.cgi" method="post">Haikutter：<br>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1">俳句を入力するんだ！</label>
-            <textarea class="form-control" id="text" rows="3"></textarea>
-            <form id="fav">
-                <div class="form-row align-items-center">
-                    <div class="col-auto"><button id="favorite" class="btn btn-primary">いいね</button></div>
+    </nav> -->
+    <div class="container">
+        <div class="row">
+            <div class="col m-3">
+                <div class="card shadow-sm mb-3">
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <textarea class="form-control mb-2" id="text" rows="3"></textarea>
+                                <div class="row align-items-center d-flex justify-content-end mb-2">
+                                    <div class="col-auto">
+                                        <label class="col-auto">あなたの名前</label>
+                                    </div>
+                                    <div class="col-auto">
+                                        <input class="col-auto form-control" type="text" id="name">
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-end">
+                                    <button class="btn btn-primary" type="submit" id=send>投稿</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </form>
-            <input name="textBox" type="text" id="name">
-            <button type="submit" class="btn btn-primary mb-2" id=send>送信する</button>
-          </div>
-    </form>
-    
+                <div id="haiku-body">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
