--- a/templates/login.html
+++ b/templates/login.html
@@ -19,9 +19,9 @@
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Password</label>
-                    <input type="password" class="form-control" id="">
+                    <input type="password" class="form-control" id="password">
                   </div>
-                  <button type="submit" class="btn btn-primary">login</button>
+                  <button id="login" type="submit" class="btn btn-primary">login</button>
               </div>
             </div>
           </div>
