--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,6 @@
     <script defer src="{{ url_for('static', filename='login.js') }}"></script>
 </head>
 <body>
-    
     <form>
         <div class="container">
             <div class="row">
@@ -20,6 +19,9 @@
                   <div class="mb-3">
                     <label class="form-label">Password</label>
                     <input type="password" class="form-control" id="password">
+                  </div>
+                  <div class="alert alert-danger" id="error-alert" style="display: none;" role="alert">
+                    idかpasswordが間違っています
                   </div>
                   <button id="login" type="submit" class="btn btn-primary">login</button>
               </div>
