--- a/templates/user.html
+++ b/templates/user.html
@@ -6,6 +6,7 @@
     <title>Haikutter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script defer src="{{ url_for('static', filename='user.js') }}"></script>
+
 </head>
 <body>
     <div class="container">
@@ -15,6 +16,9 @@
                     <img src="baboon _b.png" class="rounded-circle" alt="アイコン" width="180" height="180">
                 </div>
                 <p class="fs-2 text-center m-3">{{user_id}}</p>
+                <div id="haiku-body">
+
+                </div>
             </div>
         </div>
     </div>
