メインページのアップデート
メインページのアップデートとそれに伴う他ファイルの変更

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Haikutter</span>
-    </nav> -->
     <div class="container">
         <div class="row">
             <div class="col m-3">
@@ -23,14 +20,6 @@
                         <form>
                             <div class="form-group">
                                 <textarea class="form-control mb-2" id="text" rows="3"></textarea>
-                                <div class="row align-items-center d-flex justify-content-end mb-2">
-                                    <div class="col-auto">
-                                        <label class="col-auto">あなたの名前</label>
-                                    </div>
-                                    <div class="col-auto">
-                                        <input class="col-auto form-control" type="text" id="name">
-                                    </div>
-                                </div>
                                 <div class="d-flex justify-content-end">
                                     <button class="btn btn-primary" type="submit" id=send>投稿</button>
                                 </div>
@@ -45,5 +34,8 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 
 </html>
