--- a/templates/main.html
+++ b/templates/main.html
@@ -31,6 +31,9 @@
                                         <input class="col-auto form-control" type="text" id="name">
                                     </div>
                                 </div>
+                                <div class="alert alert-danger" id="error-alert" style="display: none;" role="alert">
+                                    俳句の投稿ができません.
+                                </div>
                                 <div class="d-flex justify-content-end">
                                     <button class="btn btn-primary" type="submit" id=send>投稿</button>
                                 </div>
