add-logout-button(test)
ログアウトボタンの動作を確認するため、仮のログアウトボタン実装を行いました。

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,6 +22,15 @@
                                 <textarea class="form-control mb-2" id="text" rows="3"></textarea>
                                 <div class="d-flex justify-content-end">
                                     <button class="btn btn-primary" type="submit" id=send>投稿</button>
+                                    
+                                    <!--logout test -->
+                                <div class="alert alert-danger" id="error-alert" style="display: none;" role="alert">
+                                    エラーが発生しました
+                                </div>
+                                <div class="d-flex justify-content-end">
+                                    <button id="logout" type="submit" class="btn btn-primary">Logout</button>
+                                </div>
+
                                 </div>
                             </div>
                         </form>
