add-user-page3(確認お願いします)

--- a/templates/user.html
+++ b/templates/user.html
@@ -15,9 +15,13 @@
         <div class="row align-items-center">
             <div class="col p-5">
                 <div class="text-center">
-                    <img src="baboon _b.png" class="rounded-circle" alt="アイコン" width="180" height="180">
+                <img id="image">
+                </img>
                 </div>
                 <p class="fs-2 text-center m-3">{{user_id}}</p>
+            </div>
+            <div id="haiku-body">
+
             </div>
         </div>
     </div>
