--- a/templates/login.html
+++ b/templates/login.html
@@ -16,13 +16,13 @@
             <div class="card shadow-sm" style="width: 30rem;">
                 <div class="card-body">
                     <h2 class="card-title mb-4">Login</h2>
-                    <div class="mb-3">
-                        <label class="form-label">Username</label>
-                        <input type="text" class="form-control" id="user-id" aria-describedby="emailHelp">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="user-id" placeholder="Username">
+                        <label for="floatingInput">Username</label>
                     </div>
-                    <div class="mb-3">
-                        <label class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password">
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
                     </div>
                     <div class="alert alert-danger" id="error-alert" style="display: none;" role="alert">
                         idかpasswordが間違っています
