--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,6 @@
     <title>Haikutter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script defer src="{{ url_for('static', filename='main.js') }}"></script>
     <script src="https://kit.fontawesome.com/1632a6074b.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -20,31 +19,20 @@
         crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
+    <script defer src="{{ url_for('static', filename='header.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Haikutter</a>
+            <a class="navbar-brand" href="http://127.0.0.1:5000/">Haikutter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-                <div class="d-flex justify-content-evenly">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <div class="dropdown">
-                            <a class="nav-link dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                            </a>
-                            <div class="list-right dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#exampleModal" data-bs-toggle="modal">Logout</a>
-                            </div>
-                        </div>
-                    </ul>
-                </div>
+            <div id="user-header">
             </div>
         </div>
     </nav>
@@ -66,6 +54,7 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <div class="row">
             <div class="col m-3">
@@ -87,26 +76,6 @@
                 </div>
                 <div id="haiku-body">
 
-                </div>
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                ...
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
