--- a/templates/user.html
+++ b/templates/user.html
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="http://127.0.0.1:5000/">Haikutter</a>
+            <a class="navbar-brand" href="http://127.0.0.1:5000/"><i class="fas fa-h-square"></i> Haikutter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
